# bzlmodRio-opencv

./: MODULE.bazel  WORKSPACE  maven_cpp_deps.bzl  maven_java_deps.bzl
.github/workflows/: auto_update.yml  build.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  generate.py  get_opencv_dependencies.py  get_version.py  publish.py
libraries/cpp/opencv/: BUILD.bazel
libraries/java/opencv/: BUILD.bazel
private/cpp/opencv/: BUILD.bazel  shared.BUILD.bazel
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: .bazelrc  MODULE.bazel  WORKSPACE
tests/cpp/opencv/: BUILD.bazel  main.cpp  test.cpp
tests/java/opencv/: BUILD.bazel  BasicTest.java  Main.java
