py_library(
    name = "get_opencv_dependencies",
    srcs = ["get_opencv_dependencies.py"],
    visibility = ["//visibility:public"],
    deps = ["@bzlmodrio-gentool//bazelrio_gentool"],
)

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":get_opencv_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "publish",
    srcs = ["publish.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":get_opencv_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)
