cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    tags = ["no-sandbox"],
    deps = ["@bzlmodrio-opencv//libraries/cpp/opencv"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    tags = [
        "bazelrio-cpp-test",
        "no-sandbox",
    ],
    deps = [
        "@bzlmodrio-opencv//libraries/cpp/opencv",
        "@googletest//:gtest_main",
    ],
)
